# sqlphilosophy

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASING.md  SECURITY.md  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yml
docs/: feature-matrix.md  release.md  repository-guide.md
docs/examples/: typed_repository_async.py  typed_repository_sync.py
docs/integration/: servicephilosophy.md
docs/usage/: audit.md  before-after-sqlalchemy.md  deletes.md  mapping-helpers.md  query-builder.md  reads.md  service-factory-composition.md  setup.md  sorting-pagination.md  sql-helpers.md  strongly-typed-repositories.md  trusted-sql.md  typed-repositories.md  types-version.md  writes.md
examples/: typed_repository_async.py  typed_repository_sync.py
scripts/: smoke_package.py
src/sqlphilosophy/: __init__.py  _repository_shared.py  sorting.py  sql.py  trusted_sql.py  types.py
src/sqlphilosophy/aio/: __init__.py  protocols.py  query.py  repository.py
src/sqlphilosophy/audit/: __init__.py  context.py  fields.py  listener.py  model.py
src/sqlphilosophy/sync/: __init__.py  protocols.py  query.py  repository.py
tests/: conftest.py  test_async_last_mile.py  test_async_query.py  test_async_repository.py  test_audit.py  test_batch7a_behavior.py  test_close_coverage.py  test_coverage_gaps.py  test_final_coverage.py  test_import_contract.py  test_last_mile.py  test_package_boundaries.py  test_protocols.py  test_query_count.py  test_query_scalar.py  test_repository_parity.py  test_repository_shared.py  test_repository_transactions.py  test_sorting.py  test_sql_helpers.py  test_sql_row_edges.py  test_sync_query.py  test_sync_repository.py  test_trusted_sql.py
