[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlphilosophy"
description = "Portable SQLAlchemy repository kit: sync and async CRUD, statement builders, sort/pagination, and SQL helpers."
readme = "README.md"
requires-python = ">=3.12,<4.0"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Josh Martin", email = "denverprogrammer@gmail.com" }
]
keywords = ["sqlalchemy", "repository-pattern", "repository", "orm", "database", "pagination", "audit", "async"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Framework :: SQLAlchemy",
    "Typing :: Typed",
]
dynamic = ["version"]
dependencies = [
    "sqlalchemy>=2.0,<3",
]

[project.optional-dependencies]
async = [
    "greenlet>=3.0",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "aiosqlite>=0.20",
    "greenlet>=3.0",
    "build>=1.2",
    "twine>=5",
]

[project.urls]
Homepage = "https://github.com/SignalSafeSoftware/sqlphilosophy"
Repository = "https://github.com/SignalSafeSoftware/sqlphilosophy"
Documentation = "https://github.com/SignalSafeSoftware/sqlphilosophy#readme"
Issues = "https://github.com/SignalSafeSoftware/sqlphilosophy/issues"
Changelog = "https://github.com/SignalSafeSoftware/sqlphilosophy/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { file = ["src/sqlphilosophy/VERSION"] }

[tool.setuptools.package-data]
sqlphilosophy = ["py.typed", "VERSION"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=sqlphilosophy --cov-report=term-missing --cov-fail-under=100"

[tool.coverage.run]
source = ["sqlphilosophy"]
branch = false

[tool.coverage.report]
fail_under = 100
show_missing = true
exclude_also = [
    "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.12"
plugins = ["sqlalchemy.ext.mypy.plugin"]
warn_unused_ignores = true
